nginx/nginx-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  host: nginx-rtd.192.168.99.103.nip.io
  port:
    targetPort: web
  to:
    kind: Service
    name: nginx
